--- a/templates/index.html
+++ b/templates/index.html
@@ -156,15 +156,11 @@
                 <div class="collapse" id="base">
                   <ul class="nav nav-collapse">
                     <li>
-                      <a href="components/simple-line-icons.html">
+                      <a href="{% url 'setor_manage' %}">
                         <span class="sub-item">Listar Setores</span>
                       </a>
                     </li>
-                    <li>
-                      <a href="components/typography.html">
-                        <span class="sub-item">Adicionar Setores</span>
-                      </a>
-                    </li>
+                    
                   </ul>
                 </div>
               </li>
@@ -198,8 +194,13 @@
                 <div class="collapse" id="forms">
                   <ul class="nav nav-collapse">
                     <li>
-                      <a href="forms/forms.html">
-                        <span class="sub-item">Basic Form</span>
+                      <a href="{% url 'colaborador_list' %}">
+                        <span class="sub-item">Listar Colaboradores</span>
+                      </a>
+                    </li>
+                    <li>
+                      <a href="{% url 'colaborador_create' %}">
+                        <span class="sub-item">Adicionar Colaborador</span>
                       </a>
                     </li>
                   </ul>
